--- a/index.html
+++ b/index.html
@@ -3,21 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mario bros</title>
+    <title>Document</title>
 </head>
 <body>
-    <main class="conteudo">
-        <nav>
-            <ul>
-              <a href="Home">Home</a>
-              <a href="Historia">Historia</a>
-              <a href="Wallpaper">Wallpaper</a>
-              <a href="Trailer">Trailer</a>
-            </ul>
-          </nav>   
-
-
-    </main>
-    
+    <header>
+        <div class="Imagem">
+            <img src="imagens/imagem.png" alt="Descrição da Imagem" class="imagem">
+            <img src="imagens/imagem01.png" alt="Descrição da imagem" class="imagem">
+            <img src="imagens/imagem02.png" alt="Descriçãoda imagem" class="imagem">
+            <img src="imagens/imagem03.png" alt="Descrição da imagem" class="imagem">
+        </div>
+        <main class="conteudo">
+            <nav class="menu">
+                <ul>
+                  <a href="HOME">HOME</a>
+                  <a href="HISTORIA">HISTORIA</a>
+                  <a href="WALLPAPER">WALLPAPER</a>
+                  <a href="TRAILER">TRAILER</a> 
+                </ul>
+            </nav>
+            <p class="texto">
+                Um dia, Mario e Luigi vão para o reino do cogumelos,
+            governado pela Princesa Peach,mas ameaçado pelo reino
+            dos Koopas,Bowser, que vai fazer de tudo para conseguir
+            reinar todos os lugares. É então quando Luigi é raptado
+            por Bowser e o usa para procurar Mario , o unico capaz 
+            de deter o Koopa e reestabelecer a paz.
+            </p>
+            <div class="button-container">
+                <button class="trailer">ASSISTIR AO TRAILER</button>
+                <button class="ingresso">COMPRAR INGRESSO</button>
+                </button>
+            </div>
+        </main>
+    </header>
 </body>
 </html>
