--- a/index.html
+++ b/index.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <header>
-        <div class="Imagem">
-            <img src="imagens/imagem.png" alt="Descrição da Imagem" class="imagem">
-            <img src="imagens/imagem01.png" alt="Descrição da imagem" class="imagem">
-            <img src="imagens/imagem02.png" alt="Descriçãoda imagem" class="imagem">
-            <img src="imagens/imagem03.png" alt="Descrição da imagem" class="imagem">
-        </div>
-        <main class="conteudo">
+    <main class="conteudo">
+        <header>
             <nav class="menu">
-                <ul>
-                  <a href="HOME">HOME</a>
-                  <a href="HISTORIA">HISTORIA</a>
-                  <a href="WALLPAPER">WALLPAPER</a>
-                  <a href="TRAILER">TRAILER</a> 
-                </ul>
+                <img class="logo-cape" src="imagens/logo-cape.png" alt="logo-cape" height="88">
+                <a href="#" class="menu-texto">HOME</a>
+                <a href="#" class="menu-texto">História</a>
+                <a href="#" class="menu-texto">WALLPAPER</a>
+                <a href="#" class="menu-texto">TRAILER</a>
             </nav>
-            <p class="texto">
-                Um dia, Mario e Luigi vão para o reino do cogumelos,
-            governado pela Princesa Peach,mas ameaçado pelo reino
-            dos Koopas,Bowser, que vai fazer de tudo para conseguir
-            reinar todos os lugares. É então quando Luigi é raptado
-            por Bowser e o usa para procurar Mario , o unico capaz 
-            de deter o Koopa e reestabelecer a paz.
-            </p>
-            <div class="button-container">
-                <button class="trailer">ASSISTIR AO TRAILER</button>
-                <button class="ingresso">COMPRAR INGRESSO</button>
-                </button>
+            <nav class="redes">
+                <img src="imagens/Instagram.png" alt="Instagram" height="30">
+                <img src="imagens/facebook.png" alt="facebook" height="30">
+                <img src="imagens/Tiktok.png" alt="Tiktok" height="30">
+                <img src="imagens/Youtube.png" alt="Youtube" height="30">
+            </nav>
+        </header>
+        <div class="linha">
+            <div class="esquerda">
+                <img src="imagens/logo-move.png" alt="Descrição da imagem" height="300">
+                <p class="texto">
+                    Um dia, Mario e Luigi vão para o reino do cogumelos,
+                    governado pela Princesa Peach,mas ameaçado pelo reino
+                    dos Koopas,Bowser, que vai fazer de tudo para conseguir
+                    reinar todos os lugares. É então quando Luigi é raptado
+                    por Bowser e o usa para procurar Mario , o unico capaz
+                    de deter o Koopa e reestabelecer a paz.
+                </p>
+                <a href="#" class="botão 1">ASSISTIR AO TRAILER</a>
+                <a href="#" class="botão 2">COMPRAR O FILME</a>
             </div>
-        </main>
-    </header>
+            <div class="direito">
+                <img src="imagens/mario-and-luigi.png" alt="mario-and-luigi"height="550">
+            </div>
+        </div>
+    </main>    
 </body>
+</body>
+
 </html>
