--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MARIO BROS</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
     <main class="conteudo">
-        <header>
+        <header class="cabeçalho">
             <nav class="menu">
-                <img class="logo-cape" src="imagens/logo-cape.png" alt="logo-cape" height="88">
+                <img class="logo" src="imagens/logo-cape.png" alt="logo" height="88">
                 <a href="#" class="menu-texto">HOME</a>
-                <a href="#" class="menu-texto">História</a>
+                <a href="#" class="menu-texto">HISTÓRIA</a>
                 <a href="#" class="menu-texto">WALLPAPER</a>
                 <a href="#" class="menu-texto">TRAILER</a>
             </nav>
@@ -23,27 +24,27 @@
                 <img src="imagens/Tiktok.png" alt="Tiktok" height="30">
                 <img src="imagens/Youtube.png" alt="Youtube" height="30">
             </nav>
+            <div class="linha">
+                <div class="esquerda">
+                    <img src="imagens/logo-move.png" alt="logo" height="300">
+                    <p class="texto">
+                        Um dia, Mario e Luigi vão para o reino do cogumelos,
+                        governado pela Princesa Peach,mas ameaçado pelo reino
+                        dos Koopas,Bowser, que vai fazer de tudo para conseguir
+                        reinar todos os lugares. É então quando Luigi é raptado
+                        por Bowser e o usa para procurar Mario , o unico capaz
+                        de deter o Koopa e reestabelecer a paz.
+                    </p>
+                    <a href="#" class="botao1">ASSITIR AO TRAILER</a>
+                    <a href="#" class="botao2">COMPRAR INGRESSOS</a>
+                </div>
+                <div class="direita">
+                    <img src="imagens/mario-and-luigi.png" alt="mario-and-luigi" height="550">
+                </div>
+            </div>
         </header>
-        <div class="linha">
-            <div class="esquerda">
-                <img src="imagens/logo-move.png" alt="Descrição da imagem" height="300">
-                <p class="texto">
-                    Um dia, Mario e Luigi vão para o reino do cogumelos,
-                    governado pela Princesa Peach,mas ameaçado pelo reino
-                    dos Koopas,Bowser, que vai fazer de tudo para conseguir
-                    reinar todos os lugares. É então quando Luigi é raptado
-                    por Bowser e o usa para procurar Mario , o unico capaz
-                    de deter o Koopa e reestabelecer a paz.
-                </p>
-                <a href="#" class="botão 1">ASSISTIR AO TRAILER</a>
-                <a href="#" class="botão 2">COMPRAR O FILME</a>
-            </div>
-            <div class="direito">
-                <img src="imagens/mario-and-luigi.png" alt="mario-and-luigi"height="550">
-            </div>
-        </div>
-    </main>    
-</body>
+    </main>
+
 </body>
 
 </html>
