--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </header>
         <div class="linha">
             <div class="esquerda">
-                <img src="imagens/logo-move.png" alt="Descrição da imagem" height="300">
+                <img src="imagens/logo-move.png" alt="logo-cape" height="300">
                 <p class="texto">
                     Um dia, Mario e Luigi vão para o reino do cogumelos,
                     governado pela Princesa Peach,mas ameaçado pelo reino
